[gd_scene load_steps=6 format=3 uid="uid://dq2ynmgvvcvxc"]

[ext_resource type="Script" uid="uid://dddteeu3w3lxs" path="res://scenes/hud.gd" id="1_oo0fn"]
[ext_resource type="FontFile" uid="uid://bspccpt0yes1b" path="res://fonts/Xolonium-Regular.ttf" id="2_5ysmq"]
[ext_resource type="Texture2D" uid="uid://cau3dwjs2pkji" path="res://art/bill_foster.png" id="3_5ysmq"]

[sub_resource type="InputEventAction" id="InputEventAction_oo0fn"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_5ysmq"]
events = [SubResource("InputEventAction_oo0fn")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -238.0
offset_right = 238.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.07615971, 4.5889665e-06, 0.07313309, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0.07615971, 4.5889665e-06, 0.07313309, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_5ysmq")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BillFoster" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -14.0
offset_right = 939.0
offset_bottom = 873.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_5ysmq")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -256.0
offset_right = 236.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.07615971, 4.5889665e-06, 0.07313309, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 64
text = "I;m thinking about thos Beans"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
